# labs_robotics

./: AssemblyTable.dae  CMakeLists.txt  README.md  Readme.md  package.xml
Project/src/katya_snowman/: package.xml
Project/src/katya_snowman/launch/: display.launch
hw5/: CMakeLists.txt  README.md  package.xml
hw5/launch/: junction.launch  main.launch  trajectory.launch
hw5/scripts/: main.py  plan.py
hw_3/: Jcol.m  Main.m  Rx.m  Rxd.m  Ry.m  Ryd.m  Rz.m  Rzd.m  Tx.m  Ty.m  Tz.m  readme.md
hw_4/: Main.m  Rx.m  Rxd.m  Ry.m  Ryd.m  Rz.m  Rzd.m  Tx.m  Ty.m  Tz.m
lab2/: FK.py  IK and FK.py  Kinematic Scheme.py  eulerAngles.py  readme.md
urdf/: katya_bot.urdf
