<?xml version="1.0"?>
<package format="2">
  <name>fanuc</name>
  <version>0.0.0</version>
  <description>The fanuc package</description>
    <maintainer email="katayU@yandex.ru">Katya</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
