<package>
  <name>urdf_lab</name>
  <version>0.0.1</version>

  <description>This package with snowman!</description>
  <author email="e.uzbekova@innopolis.ru">Katya Uzbekova</author>
  <maintainer email="e.uzbekova@innopolis.ru">Katya Uzbekova</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
